improved dockerfiles and documentation

--- a/sonar/Dockerfile
+++ b/sonar/Dockerfile
@@ -1,5 +1,5 @@
-FROM sonarqube
+FROM sonarqube:5.1.2
 MAINTAINER Tim Soethout, github@timmybankers.nl
 
-VOLUME /opt/sonar/extensions/
-VOLUME /opt/sonar/logs/
+VOLUME /opt/sonarqube/extensions/
+VOLUME /opt/sonarqube/logs/
