--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ data:
   image: base/arch
   volumes:
     - /var/lib/postgresql/data/
-    - /opt/sonarqube/extensions/plugins/
+    - /opt/sonarqube/extensions/
     - /opt/sonarqube/logs/
   command: "true"
 
@@ -12,6 +12,8 @@ db:
   environment:
    - POSTGRES_USER=sonar
    - POSTGRES_PASSWORD=sonar
+  ports:
+   - "5432:5432"
   volumes_from:
    - data
 
@@ -20,7 +22,7 @@ sonarqube:
   build: sonar
   ports:
    - "9000:9000"
-   - "5432:5432"
+  #  - "5432:5432"
   environment:
    - SONARQUBE_JDBC_URL=jdbc:postgresql://localhost:5432/sonar
   volumes_from:
@@ -29,7 +31,7 @@ sonarqube:
 plugins:
   build: sonar-plugins
   environment:
-    - SONAR_PLUGINS_DOWNLOADS_DIR=/opt/sonarqube/extensions/plugins/
+    - SONAR_PLUGINS_DOWNLOADS_DIR=/opt/sonarqube/extensions/downloads/
   #  - http_proxy=http://192.168.59.3:3128 # uncomment this if you have a proxy server set up
   #  - https_proxy=http://192.168.59.3:3128
   volumes_from:
