--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,33 +4,42 @@ data:
     - /var/lib/postgresql/data/
     - /opt/sonarqube/extensions/
     - /opt/sonarqube/logs/
+    - /opt/sonarqube/data/
   command: "true"
 
-db:
-  image: postgres
-  net: container:sonarqube
+database:
+  image: postgres:latest
   environment:
-   - POSTGRES_USER=sonar
-   - POSTGRES_PASSWORD=sonar
+    - POSTGRES_USER=sonar
+    - POSTGRES_PASSWORD=sonar
+  ports:
+    - "5432:5432"
   volumes_from:
-   - data
+    - data
 
-sonarqube:
-  # image: "sonar"
-  build: sonar
+sonar:
+  image: sonarqube:5.3
+  links:
+   - "database:db"
+  environment:
+   - SONARQUBE_JDBC_USERNAME=sonar
+   - SONARQUBE_JDBC_PASSWORD=sonar
+   - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+   - http_proxy_host=192.168.59.3 # boot2docker settings
+   - http_proxy_port=3128
+   - http_proxy=http://192.168.59.3:3128 # boot2docker settings
+   - https_proxy=http://192.168.59.3:3128 # boot2docker settings
   ports:
    - "9000:9000"
-   - "5432:5432"
-  environment:
-   - SONARQUBE_JDBC_URL=jdbc:postgresql://localhost:5432/sonar
+   - "9002:9002"
   volumes_from:
    - data
 
 plugins:
   build: sonar-plugins
   environment:
-    - SONAR_PLUGINS_DOWNLOADS_DIR=/opt/sonarqube/extensions/downloads/
-  #  - http_proxy=http://192.168.59.3:3128 # uncomment this if you have a proxy server set up
-  #  - https_proxy=http://192.168.59.3:3128
+   - SONAR_PLUGINS_DOWNLOADS_DIR=/opt/sonarqube/extensions/downloads/
+  # - http_proxy=http://192.168.59.3:3128 # boot2docker settings
+  # - https_proxy=http://192.168.59.3:3128 # boot2docker settings
   volumes_from:
    - data
